--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "liquid-glass-react": "^1.1.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-snowfall": "^2.4.0",
