--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "axios": "^1.13.2",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "liquid-glass-react": "^1.1.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^2.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
