--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts > backend-dev.log 2>&1",
     "build": "tsc",
     "start": "node dist/server.ts",
     "clear-db": "ts-node src/scripts/clearDatabase.ts"
